--- a/week3/package.json
+++ b/week3/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "response-time": "^2.3.2",
+    "zod": "^3.23.8"
   }
 }
